--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>com.dbvisit</groupId>
     <artifactId>kafka-connect-dbvisitreplicate</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>kafka-connect-dbvisitreplicate</name>
     <organization>
         <name>Dbvisit Software Limited</name>
@@ -49,11 +49,10 @@
         <junit.version>4.12</junit.version>
         <easymock.version>3.0</easymock.version>
         <powermock.version>1.6.2</powermock.version>
-        <derby.version>10.11.1.1</derby.version>
         <commons-io.version>2.4</commons-io.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <confluent.maven.repo>http://packages.confluent.io/maven</confluent.maven.repo>
-        <dbvisit.replicate.connector.version>2.8.02-SNAPSHOT</dbvisit.replicate.connector.version>
+        <dbvisit.replicate.connector.version>2.8.04</dbvisit.replicate.connector.version>
         <dbvisit.maven.repo></dbvisit.maven.repo>
     </properties>
 
@@ -118,12 +117,6 @@
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-easymock</artifactId>
             <version>${powermock.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.derby</groupId>
-            <artifactId>derby</artifactId>
-            <version>${derby.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
