--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
     <groupId>com.dbvisit</groupId>
     <artifactId>kafka-connect-dbvisitreplicate</artifactId>
     <packaging>jar</packaging>
-    <version>2.0.0</version>
-    <name>kafka-connect-dbvisitreplicate</name>
+    <version>2.9.00</version>
+    <name>Dbvisit Replicate Connector for Kafka : Source Connector</name>
     <organization>
         <name>Dbvisit Software Limited</name>
         <url>http://www.dbvisit.com</url>
@@ -43,16 +43,15 @@
     </licenses>
 
     <properties>
-        <confluent.version>2.0.0</confluent.version>
-        <kafka.version>0.9.0.0</kafka.version>
+        <kafka.version>0.10.1.0</kafka.version>
         <jackson-2.version>2.7.1</jackson-2.version>
         <junit.version>4.12</junit.version>
-        <easymock.version>3.0</easymock.version>
+        <easymock.version>3.4</easymock.version>
         <powermock.version>1.6.2</powermock.version>
         <commons-io.version>2.4</commons-io.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <confluent.maven.repo>http://packages.confluent.io/maven</confluent.maven.repo>
-        <dbvisit.replicate.connector.version>2.8.04</dbvisit.replicate.connector.version>
+        <dbvisit.replicate.connector.version>2.9.00</dbvisit.replicate.connector.version>
         <dbvisit.maven.repo></dbvisit.maven.repo>
     </properties>
 
@@ -68,11 +67,6 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>connect-api</artifactId>
             <version>${kafka.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.confluent</groupId>
-            <artifactId>common-config</artifactId>
-            <version>${confluent.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
